Sprint 1 - Página de inicio

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>Inicio</title>
     <link rel="stylesheet" href="./estilos.css" />
   </head>
   <body>
-    <header></header>
-    <main></main>
+    <header>
+      <nav id="horizontal_navbar" class="menu">
+        <img
+          id="landing_logo"
+          src="https://fakeimg.pl/200x100/?text=Logo"
+          alt="logo"
+        />
+        <a
+          id="irA_registro _usuario"
+          href="./registro.html"
+          class="menu-boton-registro"
+        >
+          <button id="boton_registro_usuario">Registrarse</button>
+        </a>
+      </nav>
+    </header>
+    <main>
+      <h1 class="titulos">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+      </h1>
+      <p class="textos">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus,
+        eaque facere? Aperiam laudantium sit reiciendis! Odit, magni? Iste sed,
+        possimus cupiditate architecto cumque quae neque repellat quaerat
+        accusantium, ea esse!
+      </p>
+    </main>
   </body>
 </html>
