--- a/src/registro.html
+++ b/src/registro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,6 +9,24 @@
   </head>
   <body>
     <header></header>
-    <main></main>
+    <main>
+      <form class="formulario" id="form_nuevo_usuario">
+        <div class="contenedor-datos-formulario">
+          <label class="label" for="dato_nombre_usuario">Nombre:</label>
+          <input id="dato_nombre_usuario" type="text" />
+        </div>
+        <div class="contenedor-datos-formulario">
+          <label class="label" for="dato_edad_usuario">Edad:</label>
+          <input id="dato_edad_usuario" type="number" />
+        </div>
+        <div class="contenedor-datos-formulario">
+          <label class="label" for="dato_contrasena">Contraseña:</label>
+          <input id="dato_contrasena" type="password" />
+        </div>
+        <div class="contenedor-botones-formulario">
+          <button id="enviar_registro">Enviar</button>
+        </div>
+      </form>
+    </main>
   </body>
 </html>
